align text correction

--- a/odin-recipes/recipes/style.css
+++ b/odin-recipes/recipes/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    width: 80%;
+    width: 100%;
     height: auto;
     text-align: center;
 }
@@ -16,7 +16,7 @@ img {
 
 ol,
 ul {
-    text-align: center;
+    text-align: left;
 }
 
 li {
